# cv

./: .gitignore  BUILD  Dockerfile  MODULE.bazel  Makefile  README.md  cv.tex  install_latex.sh  install_latex_pkgs.sh  run_latex.sh  setup.tex
docker/: Dockerfile  run_latex.sh
githooks/: pre-commit
