# Copying the suggested MODULE.bazel from:
# https://github.com/ProdriveTechnologies/bazel-latex/blob/c552d5bd09e4e9e49040ede60dd97720acb1cbb7/README.md

bazel_dep(name = "bazel_latex")

git_override(
    module_name = "bazel_latex",
    remote = "https://github.com/ProdriveTechnologies/bazel-latex.git",
    commit = "c552d5bd09e4e9e49040ede60dd97720acb1cbb7",
)

